k8s/ingress/library-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
spec:
  rules:
  - host: ns.library
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ns-library-service
            port:
              number: 8081

  - host: bg.library
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bg-library-service
            port:
              number: 8081

  - host: nis.library
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nis-library-service
            port:
              number: 8081
